# agent-example

./: .env.example  .gitignore  AGENTS.md  HISTORY.md  README.md  context.py  docker-compose.dev.yml  main.py  pyproject.toml  utils.py
.github/workflows/: api-ci.yml  web-ci.yml  worker-ci.yml
agents/: html_report.py  web_research.py
api/: .editorconfig  .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum  sqlc.yaml
api/cmd/api/: main.go
api/internal/application/: doc.go
api/internal/auth/: auth.go  auth_test.go  download_token.go  download_token_test.go  version_tokens.go  version_tokens_test.go
api/internal/domain/: doc.go
api/internal/pkg/: doc.go
api/migrations/: 0001_init_outbox.down.sql  0001_init_outbox.up.sql  0002_init_task_domain.down.sql  0002_init_task_domain.up.sql  0003_init_cost_domain.down.sql  0003_init_cost_domain.up.sql  0004_cost_events_kind_unique.down.sql  0004_cost_events_kind_unique.up.sql  0005_seed_pricing.down.sql  0005_seed_pricing.up.sql  0006_outbox_exchange.down.sql  0006_outbox_exchange.up.sql  0007_init_identity.down.sql  0007_init_identity.up.sql  0008_artifacts_unique_oss_key.down.sql  0008_artifacts_unique_oss_key.up.sql  0009_task_versions_summary.down.sql  0009_task_versions_summary.up.sql  0010_artifacts_path.down.sql  0010_artifacts_path.up.sql  0011_tasks_soft_delete.down.sql  0011_tasks_soft_delete.up.sql
api/queries/: artifacts.sql  cost_events.sql  outbox.sql  pricing.sql  task_checkpoints.sql  task_costs.sql  task_events.sql  task_runs.sql  task_versions.sql  tasks.sql  users.sql
docs/: ARCHITECTURE.md  DEVELOPMENT.md  HISTORY.md
infra/seaweedfs/: s3-config.json
middlewares/: __init__.py  datetime_middleware.py
openspec/: config.yaml
openspec/changes/add-api-auth-jwt/: proposal.md  suggestions.md  tasks.md
openspec/changes/add-api-user-store/: proposal.md  tasks.md
openspec/changes/add-artifact-deletion/: design.md  proposal.md  tasks.md
openspec/changes/add-artifacts-api/: proposal.md  suggestions.md  tasks.md
openspec/changes/add-checkpoint-persistence/: tasks.md
openspec/changes/add-cost-service/: suggestions.md  tasks.md
openspec/changes/add-dual-theme-toggle/: design.md  proposal.md  tasks.md
openspec/changes/add-event-ingest-status-sync/: design.md  suggestions.md  tasks.md
openspec/changes/add-realtime-gateway/: proposal.md  suggestions.md  tasks.md
openspec/changes/add-semantic-task-title/: design.md  tasks.md
openspec/changes/add-task-control-api/: design.md  proposal.md  suggestions.md  tasks.md
openspec/changes/add-task-cost-api/: proposal.md  suggestions.md  tasks.md
openspec/changes/add-task-create-api/: design.md  proposal.md  suggestions.md  tasks.md
openspec/changes/add-task-deletion/: design.md  tasks.md
openspec/changes/add-task-domain-schema/: design.md  proposal.md  suggestions.md  tasks.md
openspec/changes/add-task-read-api/: design.md  suggestions.md  tasks.md
openspec/changes/add-task-rollback-api/: proposal.md  tasks.md
openspec/changes/add-task-title-autogen/: design.md  proposal.md  tasks.md
openspec/changes/add-web-artifacts-views/: design.md  proposal.md  suggestions.md  tasks.md
openspec/changes/add-web-auth-login/: suggestions.md  tasks.md
openspec/changes/add-web-control-bar/: design.md  proposal.md  tasks.md
openspec/changes/add-web-cost-views/: design.md  proposal.md  suggestions.md  tasks.md
openspec/changes/add-web-rollback-entry/: design.md  proposal.md  tasks.md
openspec/changes/add-worker-code-agent/: design.md  proposal.md  suggestions.md  tasks.md
openspec/changes/add-worker-control-handling/: proposal.md  suggestions.md  tasks.md
openspec/changes/add-worker-rollback-handling/: design.md  proposal.md
sandbox/: __init__.py  docker_sandbox.py
skills/share-html/: SKILL.md
web/: .gitignore  .prettierignore  AGENTS.md  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
web/scripts/: check-colors.mjs
web/src/: main.tsx  router.tsx
web/src/lib/: cn.test.ts  (+1 more)
worker/: .gitignore  Makefile  README.md  pyproject.toml
worker/tests/: conftest.py
worker/tests/integration/: conftest.py  test_checkpoint.py  test_code_agent.py  test_consumer_end_to_end.py  test_mq_topology.py  test_persistence.py  test_storage.py
worker/tests/support/: __init__.py  fake_model.py
worker/tests/unit/: test_agent_loop.py  test_agent_model.py  test_agent_registry.py  test_config.py  test_context_block.py  test_control.py  test_cost_meter.py  test_dispatcher.py  test_heartbeat.py  test_inherit.py  test_messages.py  test_oss_fs_handler.py  test_plugins.py  test_publisher.py  test_run_summary.py  test_storage_paths.py  test_subagent_plugins.py  test_title.py
worker/worker/: __init__.py  __main__.py  main.py
worker/worker/agents/: __init__.py  base.py  code_agent.py  context_block.py  inherit.py  loop.py  model.py  registry.py  research_agent.py  subagent.py  tools.py
worker/worker/agents/prompts/: code_system.md  research_system.md
worker/worker/core/: __init__.py  checkpoint.py  config.py  consumer.py  control.py  cost_meter.py  dispatcher.py  heartbeat.py  lifecycle.py  logging.py  messages.py  metrics.py  mq_connection.py  persistence.py  publisher.py  run_context.py  storage.py  title.py  tracing.py
worker/worker/plugins/: __init__.py  loader.py  registry.py  schema.py  subagent_spec.py
worker/worker/plugins/subagent/critic/: handler.py  plugin.yaml  prompt.md
worker/worker/plugins/subagent/executor/: handler.py  plugin.yaml  prompt.md
worker/worker/plugins/subagent/planner/: handler.py  plugin.yaml  prompt.md
worker/worker/plugins/tool/noop_tool/: handler.py  plugin.yaml
worker/worker/plugins/tool/oss_fs/: handler.py  plugin.yaml
worker/worker/plugins/tool/web_search/: handler.py  plugin.yaml
(+537 files in other folders)
