[project]
name = "agent-example"
version = "0.1.0"
description = "A deep agent for various tasks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dashscope>=1.25.16",
    "ddgs>=9.13.0",
    "deepagents>=0.5.2",
    "docker>=7.1.0",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "python-dotenv>=1.2.2",
]
