[project]
name = "agent-example"
version = "0.1.0"
description = "A deep agent for various tasks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.1",
    "deepagents>=0.5.3",
    "docker>=7.1.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "python-dotenv>=1.2.2",
]
